--- a/estilos.css
+++ b/estilos.css
@@ -431,6 +431,33 @@ span {
   
    @media (max-width: 800px) {
 
+    .imagen-fija{
+
+        background: url(imagenes/pablocel.jpg);
+        
+        width: 100%;
+        height: 450px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        padding-bottom: 60px;
+    }
+
+        .imagen-fija2{
+
+            background: url(imagenes/pablo2cel.jpg);
+            
+            width: 100%;
+            height: 450px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            padding-bottom: 60px;
+            }
+
+        .contenedor-trabajar p {
+            padding: 0 5px;
+        }
    
 
     .menu-icon {
